# fitbit-web-api-rs

./: .gitignore  Cargo.toml  README.md  auth_token
src/: args.rs  lib.rs  main.rs
src/activity/: goals.rs  lifetime_stats.rs  mod.rs  summary.rs  time_series.rs
src/body/: fat.rs  goals.rs  mod.rs  time_series.rs  weight.rs
src/client/: mod.rs  oauth.rs
src/devices/: get.rs  mod.rs
src/heart_rate/: intraday_time_series.rs  mod.rs  time_series.rs
src/sleep/: list.rs  logs.rs  mod.rs
src/sleep/goals/: get.rs  mod.rs  update.rs
src/user/: mod.rs
src/user/badges/: get.rs  mod.rs
src/user/profile/: mod.rs  update.rs
