[package]
name = "fitbit-web-api"
version = "0.1.0"
authors = ["Matt Vertescher <mvertescher@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mvertescher/fitbit-web-api-rs"
homepage = "https://github.com/mvertescher/fitbit-web-api-rs"
description = """
An API client for Fitbit's Web API.
"""
categories = ["cli"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "2"
log = "0.4.0"
oauth2 = "2.0.0-alpha"
pretty_env_logger = "0.3"
reqwest= "0.9.5"
serde = "1"
serde_derive = "1"
serde_json = "1"
url = "1"
url_serde = "0.2.0"
