[package]
authors = ["Matt Vertescher <mvertescher@gmail.com>"]
categories = ["cli"]
description = " A CLI client for Fitbit's Web API."
edition = "2018"
homepage = "https://github.com/mvertescher/fitbit-web-api-rs"
license = "MIT OR Apache-2.0"
name = "fitbit-web-api"
repository = "https://github.com/mvertescher/fitbit-web-api-rs"
version = "0.1.0"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "2"
log = "0.4.0"
oauth2 = "2.0.0-alpha"
opener = "0.3.2"
pretty_env_logger = "0.3"
reqwest = "0.9.5"
serde = "1"
serde_derive = "1"
serde_json = "1"
strum = "0.13.0"
strum_macros = "0.13.0"
url = "1"
url_serde = "0.2.0"
