[package]
authors = ["Matt Vertescher <mvertescher@gmail.com>"]
categories = ["cli"]
description = " A CLI client for Fitbit's Web API."
edition = "2018"
homepage = "https://github.com/mvertescher/fitbit-web-api-rs"
license = "MIT OR Apache-2.0"
name = "fitbit-web-api"
repository = "https://github.com/mvertescher/fitbit-web-api-rs"
version = "0.1.0"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "2"
log = "0.4.11"
oauth2 = "3"
opener = "0.4.1"
pretty_env_logger = "0.4"
reqwest = "0.10.8"
serde = "1"
serde_derive = "1"
serde_json = "1"
strum = "0.19.2"
strum_macros = "0.19.2"
url = { version = "2", features = ["serde"] }

[dependencies.tokio]
default-features = false
features = ["macros"]
version = "0.2.22"
